brought raw data in

--- a/tyler_scratchpad.ipynb
+++ b/tyler_scratchpad.ipynb
@@ -6,6 +6,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from requests import get\n",
+    "from bs4 import BeautifulSoup\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://github.com/topics/awesome'\n",
+    "headers = {'User-Agent': 'Codeup Data Science'} # Some websites don't accept the pyhon-requests default user-agent\n",
+    "response = get(url, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo = soup.find_all('a', class_ = 'text-bold')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/sindresorhus/awesome\n",
+      "/vinta/awesome-python\n",
+      "/avelino/awesome-go\n",
+      "/awesome-selfhosted/awesome-selfhosted\n",
+      "/trimstray/the-book-of-secret-knowledge\n",
+      "/papers-we-love/papers-we-love\n",
+      "/Hack-with-Github/Awesome-Hacking\n",
+      "/521xueweihan/HelloGitHub\n",
+      "/jaywcjlove/awesome-mac\n",
+      "/sindresorhus/awesome-nodejs\n",
+      "/DopplerHQ/awesome-interview-questions\n",
+      "/wasabeef/awesome-android-ui\n",
+      "/vsouza/awesome-ios\n",
+      "/prakhar1989/awesome-courses\n",
+      "/Solido/awesome-flutter\n",
+      "/binhnguyennus/awesome-scalability\n",
+      "/MunGell/awesome-for-beginners\n",
+      "/fffaraz/awesome-cpp\n",
+      "/tiimgreen/github-cheat-sheet\n",
+      "/dypsilon/frontend-dev-bookmarks\n",
+      "/akullpp/awesome-java\n",
+      "/dkhamsing/open-source-ios-apps\n",
+      "/brillout/awesome-react-components\n",
+      "/serhii-londar/open-source-mac-os-apps\n",
+      "/ziadoz/awesome-php\n",
+      "/herrbischoff/awesome-macos-command-line\n",
+      "/goabstract/Awesome-Design-Tools\n",
+      "/alebcay/awesome-shell\n",
+      "/sindresorhus/awesome-electron\n",
+      "/rust-unofficial/awesome-rust\n"
+     ]
+    }
+   ],
+   "source": [
+    "href_list = []\n",
+    "for i in repo:\n",
+    "    href_list.append(i['href'])\n",
+    "    print(i['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(href_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
