--- a/tyler_scratchpad.ipynb
+++ b/tyler_scratchpad.ipynb
@@ -133,9 +133,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python385jvsc74a57bd0b64057e63add2b45b1ffc7eab9b09c8889b419c878e2fdf0d08f837f0fc857a7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
