--- a/parkers_workbook.ipynb
+++ b/parkers_workbook.ipynb
@@ -4819,7 +4819,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 655,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 668,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4833,7 +4843,8 @@
     "X_train_vectorized =tfidf.transform(X_train)\n",
     "X_validate_vectorized =tfidf.transform(X_validate) \n",
     "X_test_vectorized =tfidf.transform(X_test)\n",
-    "\n",
+    "#oversample = RandomOverSampler(sampling_strategy='auto', random_state = 123)\n",
+    "#smote = SMOTE(sampling_strategy = 'minority', k_neighbors = 2)\n",
     "undersample = NearMiss(version=2)\n",
     "# transform the dataset\n",
     "X_train_vectorized, y_train_vectorized = undersample.fit_resample(X_train_vectorized, le.fit_transform(y_train))"
@@ -4841,7 +4852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 669,
    "metadata": {},
    "outputs": [
     {
@@ -4850,28 +4861,31 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.29      0.50      0.36         4\n",
-      "           1       0.40      0.40      0.40         5\n",
-      "           2       0.29      0.33      0.31         6\n",
-      "           3       0.50      0.17      0.25         6\n",
+      "           0       0.60      1.00      0.75        12\n",
+      "           1       0.64      0.75      0.69        12\n",
+      "           2       1.00      0.83      0.91        12\n",
+      "           3       1.00      0.33      0.50        12\n",
       "\n",
-      "    accuracy                           0.33        21\n",
-      "   macro avg       0.37      0.35      0.33        21\n",
-      "weighted avg       0.37      0.33      0.32        21\n",
+      "    accuracy                           0.73        48\n",
+      "   macro avg       0.81      0.73      0.71        48\n",
+      "weighted avg       0.81      0.73      0.71        48\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# create KNN classifier object\n",
     "knn = KNeighborsClassifier(n_neighbors=2, weights='uniform')\n",
+    "\n",
+    "# fit the model to vectorized data\n",
     "knn.fit(X_train_vectorized, y_train_vectorized)\n",
-    "y_pred = knn.predict(X_test_vectorized)\n",
-    "print(classification_report(le.fit_transform(y_test), y_pred))"
+    "y_pred = knn.predict(X_train_vectorized)\n",
+    "print(classification_report(y_train_vectorized, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 670,
    "metadata": {},
    "outputs": [
     {
@@ -4899,177 +4913,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = rf.predict(X_test_vectorized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 671,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, 2, 2, 2, 0, 0, 0, 2, 2, 2, 3, 2, 3, 0, 0, 0, 2, 0, 3])"
-      ]
-     },
-     "execution_count": 530,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.29      0.50      0.36         4\n",
+      "           1       0.40      0.40      0.40         5\n",
+      "           2       0.29      0.33      0.31         6\n",
+      "           3       0.50      0.17      0.25         6\n",
+      "\n",
+      "    accuracy                           0.33        21\n",
+      "   macro avg       0.37      0.35      0.33        21\n",
+      "weighted avg       0.37      0.33      0.32        21\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 533,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Python', 'Python', 'Python', 'Python', 'Python', 'Python', 'HTML',\n",
-       "       'HTML', 'HTML', 'Python', 'Python', 'Python', 'Shell', 'Python',\n",
-       "       'Shell', 'HTML', 'HTML', 'HTML', 'Python', 'HTML', 'Shell'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 533,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "le.inverse_transform(y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 534,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66           HTML\n",
-       "22     JavaScript\n",
-       "62           HTML\n",
-       "5      JavaScript\n",
-       "6      JavaScript\n",
-       "34         Python\n",
-       "116         Shell\n",
-       "88           HTML\n",
-       "21     JavaScript\n",
-       "109         Shell\n",
-       "96          Shell\n",
-       "111         Shell\n",
-       "0      JavaScript\n",
-       "41         Python\n",
-       "30         Python\n",
-       "36         Python\n",
-       "117         Shell\n",
-       "42         Python\n",
-       "39         Python\n",
-       "114         Shell\n",
-       "78           HTML\n",
-       "Name: language, dtype: object"
-      ]
-     },
-     "execution_count": 534,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 535,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 0, 1, 1, 2, 3, 0, 1, 3, 3, 3, 1, 2, 2, 2, 3, 2, 2, 3, 0])"
-      ]
-     },
-     "execution_count": 535,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "le.fit_transform(y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 537,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0           covid19\n",
-       "1       coronavirus\n",
-       "2              food\n",
-       "3            letter\n",
-       "4           climate\n",
-       "           ...     \n",
-       "6624        koponen\n",
-       "6625       foodtech\n",
-       "6626           1964\n",
-       "6627     letterlike\n",
-       "6628      yudkowsky\n",
-       "Length: 6629, dtype: object"
-      ]
-     },
-     "execution_count": 537,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "java_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 538,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                     install\n",
-       "1                                       clone\n",
-       "2                                       month\n",
-       "3                                         pip\n",
-       "4                                         ago\n",
-       "                         ...                 \n",
-       "12416                              rustbridge\n",
-       "12417                             exemplified\n",
-       "12418    httpsgithubcomfacebookresearchhiplot\n",
-       "12419                             rflutterdev\n",
-       "12420                          encoderdecoder\n",
-       "Length: 12421, dtype: object"
-      ]
-     },
-     "execution_count": 538,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "python_"
+    "y_pred = knn.predict(X_test_vectorized)\n",
+    "print(classification_report(le.fit_transform(y_test), y_pred))"
    ]
   },
   {
