Revert "added modeling to final notebook"
This reverts commit b9cb757067b4fd928bf7195848aff44a0c63df27.

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,17 +595,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "baseline = (train.baseline == y_train).mean()\n",
     "print(f'Baseline accuracy is {baseline * 100:.2f}%')"
@@ -613,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,29 +623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.00      0.00      0.00        12\n",
-      "  JavaScript       0.00      0.00      0.00        13\n",
-      "      Python       0.00      0.00      0.00        15\n",
-      "       Shell       0.29      1.00      0.44        16\n",
-      "\n",
-      "    accuracy                           0.29        56\n",
-      "   macro avg       0.07      0.25      0.11        56\n",
-      "weighted avg       0.08      0.29      0.13        56\n",
-      "\n",
-      "Model accuracy is 0.29%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create the RF object\n",
     "rf = RandomForestClassifier(bootstrap=True, \n",
@@ -677,29 +649,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.00      0.00      0.00         6\n",
-      "  JavaScript       0.00      0.00      0.00         6\n",
-      "      Python       0.00      0.00      0.00         6\n",
-      "       Shell       0.28      1.00      0.44         7\n",
-      "\n",
-      "    accuracy                           0.28        25\n",
-      "   macro avg       0.07      0.25      0.11        25\n",
-      "weighted avg       0.08      0.28      0.12        25\n",
-      "\n",
-      "Model accuracy is 0.28%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = rf.predict(X_validate_vectorized)\n",
     "print(classification_report(y_validate, y_pred, zero_division=0))\n",
@@ -709,29 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.56      0.75      0.64        12\n",
-      "  JavaScript       0.60      0.46      0.52        13\n",
-      "      Python       1.00      0.67      0.80        15\n",
-      "       Shell       0.70      0.88      0.78        16\n",
-      "\n",
-      "    accuracy                           0.70        56\n",
-      "   macro avg       0.72      0.69      0.69        56\n",
-      "weighted avg       0.73      0.70      0.70        56\n",
-      "\n",
-      "Model accuracy is 0.70%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Make the CLF object\n",
     "clf = DecisionTreeClassifier(max_depth=4, random_state=123, min_samples_leaf = 10)\n",
@@ -750,29 +682,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.67      0.67      0.67         6\n",
-      "  JavaScript       0.33      0.17      0.22         6\n",
-      "      Python       0.33      0.17      0.22         6\n",
-      "       Shell       0.38      0.71      0.50         7\n",
-      "\n",
-      "    accuracy                           0.44        25\n",
-      "   macro avg       0.43      0.43      0.40        25\n",
-      "weighted avg       0.43      0.44      0.41        25\n",
-      "\n",
-      "Model accuracy is 0.44%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = clf.predict(X_validate_vectorized)\n",
     "print(classification_report(y_validate, y_pred, zero_division=0))\n",
@@ -782,29 +694,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       1.00      0.83      0.91        12\n",
-      "  JavaScript       1.00      1.00      1.00        13\n",
-      "      Python       1.00      1.00      1.00        15\n",
-      "       Shell       0.89      1.00      0.94        16\n",
-      "\n",
-      "    accuracy                           0.96        56\n",
-      "   macro avg       0.97      0.96      0.96        56\n",
-      "weighted avg       0.97      0.96      0.96        56\n",
-      "\n",
-      "Model accuracy is 0.96%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Make the naive bayes object\n",
     "nb = MultinomialNB()\n",
@@ -823,29 +715,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.00      0.00      0.00         6\n",
-      "  JavaScript       0.00      0.00      0.00         6\n",
-      "      Python       1.00      0.50      0.67         6\n",
-      "       Shell       0.29      0.86      0.43         7\n",
-      "\n",
-      "    accuracy                           0.36        25\n",
-      "   macro avg       0.32      0.34      0.27        25\n",
-      "weighted avg       0.32      0.36      0.28        25\n",
-      "\n",
-      "Model accuracy is 0.36%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Make predictions\n",
     "y_pred = nb.predict(X_validate_vectorized)\n",
@@ -858,29 +730,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.75      1.00      0.86        12\n",
-      "  JavaScript       0.76      1.00      0.87        13\n",
-      "      Python       0.92      0.73      0.81        15\n",
-      "       Shell       1.00      0.69      0.81        16\n",
-      "\n",
-      "    accuracy                           0.84        56\n",
-      "   macro avg       0.86      0.86      0.84        56\n",
-      "weighted avg       0.87      0.84      0.84        56\n",
-      "\n",
-      "Model accuracy is 0.84%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create KNN classifier object\n",
     "knn = KNeighborsClassifier(n_neighbors=2, weights='uniform')\n",
@@ -896,51 +748,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.56      0.83      0.67         6\n",
-      "  JavaScript       0.50      0.83      0.62         6\n",
-      "      Python       1.00      0.67      0.80         6\n",
-      "       Shell       0.50      0.14      0.22         7\n",
-      "\n",
-      "    accuracy                           0.60        25\n",
-      "   macro avg       0.64      0.62      0.58        25\n",
-      "weighted avg       0.63      0.60      0.56        25\n",
-      "\n",
-      "Model accuracy is 0.60%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = knn.predict(X_validate_vectorized)\n",
-    "print(classification_report(y_validate, y_pred, zero_division=0))\n",
-    "print(f'Model accuracy is {knn.score(X_validate_vectorized, y_validate):.2f}%')\n",
-    "print(f'Baseline accuracy is {baseline * 100:.2f}%')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Building - Key Findings & Takeaways:\n",
-    "\n",
-    "- All models passed the baseline on the validate split, except for the Random Forest Classifier\n",
-    "- All models are overfit\n",
-    "- K-Nearest Neighbors performed the best, outperforming the baseline by 31.43%\n",
-    "    - Model efficacy could be improved by increasing the amount of readmes in the dataset\n",
-    "    - Readme length also greatly varied across languages which creates a psuedo-class imbalance. Finding a method to scale readme length would help reduce overfitting\n",
-    "    - Further hyper-parameter tuning and feature engineering could help generalize the model better\n",
-    "- Most were pretty imbalanced when predicting all four languages, but K-Nearest Neighbors predicted all but shell somewhat equally\n",
-    "- For these reasons, we will use KNN on the test set"
+    "### Model Building - Key Findings & Takeaways:"
    ]
   },
   {
@@ -952,53 +763,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        HTML       0.43      0.75      0.55         4\n",
-      "  JavaScript       0.50      0.40      0.44         5\n",
-      "      Python       0.67      0.33      0.44         6\n",
-      "       Shell       0.29      0.33      0.31         6\n",
-      "\n",
-      "    accuracy                           0.43        21\n",
-      "   macro avg       0.47      0.45      0.44        21\n",
-      "weighted avg       0.47      0.43      0.42        21\n",
-      "\n",
-      "Model accuracy is 0.43%\n",
-      "Baseline accuracy is 28.57%\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = knn.predict(X_test_vectorized)\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "print(f'Model accuracy is {knn.score(X_test_vectorized, y_test):.2f}%')\n",
-    "print(f'Baseline accuracy is {baseline * 100:.2f}%')"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Evaluation - Key Findings & Takeaways:\n",
-    "- The model outperformed the baseline by 15% and was not too lopsided in predicting each language\n",
-    "- The model performed very well in predicting HTML code\n",
-    "- Performs the worst with Shell\n",
-    "- More data is needed "
+    "### Model Evaluation - Key Findings & Takeaways:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
