Revert "edited stopword function"
This reverts commit 4f685745874019baf48afacffe9e76278316c522.

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,16 +121,16 @@
       "\n",
       "Stats on Numeric Columns\n",
       "\n",
-      "                                    repo language  \\\n",
-      "count                                120      120   \n",
-      "unique                               120        4   \n",
-      "top     /jeffreytse/jekyll-deploy-action     HTML   \n",
-      "freq                                   1       30   \n",
+      "                              repo language  \\\n",
+      "count                          120      120   \n",
+      "unique                         120        4   \n",
+      "top     /ml-tooling/best-of-python     HTML   \n",
+      "freq                             1       30   \n",
       "\n",
       "                                          readme_contents  \n",
       "count                                                 119  \n",
       "unique                                                119  \n",
-      "top     \\r\\n\\r\\nNote, this is the source code version,...  \n",
+      "top     # 前端精读\\n\\n<a href=\"https://travis-ci.org/ascod...  \n",
       "freq                                                    1  \n",
       "----------------------------------\n",
       "\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,11 +252,11 @@
       "\n",
       "Stats on Numeric Columns\n",
       "\n",
-      "                               repo language  \\\n",
-      "count                            56       56   \n",
-      "unique                           56        4   \n",
-      "top     /anmol098/waka-readme-stats    Shell   \n",
-      "freq                              1       16   \n",
+      "                              repo language  \\\n",
+      "count                           56       56   \n",
+      "unique                          56        4   \n",
+      "top     /opensourcecities/montreal    Shell   \n",
+      "freq                             1       16   \n",
       "\n",
       "                                          readme_contents  \\\n",
       "count                                                  56   \n",
@@ -267,19 +267,19 @@
       "                                  cleaned_readme_contents  \\\n",
       "count                                                  56   \n",
       "unique                                                 56   \n",
-      "top     markdownlintdisable bestof machine learning py...   \n",
+      "top     awesome browser extensions github numbers upda...   \n",
       "freq                                                    1   \n",
       "\n",
       "                                  stemmed_readme_contents  \\\n",
       "count                                                  56   \n",
       "unique                                                 56   \n",
-      "top     titl awesom geek podcast permalink awesom geek...   \n",
+      "top     thi popular repositori list actionscript sort ...   \n",
       "freq                                                    1   \n",
       "\n",
       "                               lemmatized_readme_contents  \n",
       "count                                                  56  \n",
       "unique                                                 56  \n",
-      "top     awesome spinner curated collection dazzling we...  \n",
+      "top     english quickstart tutorial model list demo in...  \n",
       "freq                                                    1  \n",
       "----------------------------------\n",
       "\n",
@@ -324,11 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create lists of all words, java words, html words, python words, and shell words\n",
+    "\n",
     "all_words = (' '.join(train.cleaned_readme_contents))\n",
     "java_words = (' '.join(train[train.language == 'JavaScript'].cleaned_readme_contents))\n",
     "shell_words = (' '.join(train[train.language == 'Shell'].cleaned_readme_contents))\n",
@@ -338,11 +339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert the lists to number counts of each word\n",
+    "\n",
     "all_freq = pd.Series(all_words.split()).value_counts()\n",
     "java_freq = pd.Series(java_words.split()).value_counts()\n",
     "shell_freq = pd.Series(shell_words.split()).value_counts()\n",
@@ -352,11 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary to save words to be parsed later\n",
     "documents = {'java': java_words,\n",
     "            'python': python_words,\n",
     "            'HTML': html_words,\n",
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,9 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "baseline = (train.baseline == y_train).mean()\n",
     "print(f'Baseline accuracy is {baseline * 100:.2f}%')"
@@ -605,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,9 +632,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.00      0.00      0.00        12\n",
+      "  JavaScript       0.00      0.00      0.00        13\n",
+      "      Python       0.00      0.00      0.00        15\n",
+      "       Shell       0.29      1.00      0.44        16\n",
+      "\n",
+      "    accuracy                           0.29        56\n",
+      "   macro avg       0.07      0.25      0.11        56\n",
+      "weighted avg       0.08      0.29      0.13        56\n",
+      "\n",
+      "Model accuracy is 0.29%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "#Create the RF object\n",
     "rf = RandomForestClassifier(bootstrap=True, \n",
@@ -649,9 +678,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.00      0.00      0.00         6\n",
+      "  JavaScript       0.00      0.00      0.00         6\n",
+      "      Python       0.00      0.00      0.00         6\n",
+      "       Shell       0.28      1.00      0.44         7\n",
+      "\n",
+      "    accuracy                           0.28        25\n",
+      "   macro avg       0.07      0.25      0.11        25\n",
+      "weighted avg       0.08      0.28      0.12        25\n",
+      "\n",
+      "Model accuracy is 0.28%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = rf.predict(X_validate_vectorized)\n",
     "print(classification_report(y_validate, y_pred, zero_division=0))\n",
@@ -661,9 +710,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.56      0.75      0.64        12\n",
+      "  JavaScript       0.60      0.46      0.52        13\n",
+      "      Python       1.00      0.67      0.80        15\n",
+      "       Shell       0.70      0.88      0.78        16\n",
+      "\n",
+      "    accuracy                           0.70        56\n",
+      "   macro avg       0.72      0.69      0.69        56\n",
+      "weighted avg       0.73      0.70      0.70        56\n",
+      "\n",
+      "Model accuracy is 0.70%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "#Make the CLF object\n",
     "clf = DecisionTreeClassifier(max_depth=4, random_state=123, min_samples_leaf = 10)\n",
@@ -682,9 +751,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.67      0.67      0.67         6\n",
+      "  JavaScript       0.33      0.17      0.22         6\n",
+      "      Python       0.33      0.17      0.22         6\n",
+      "       Shell       0.38      0.71      0.50         7\n",
+      "\n",
+      "    accuracy                           0.44        25\n",
+      "   macro avg       0.43      0.43      0.40        25\n",
+      "weighted avg       0.43      0.44      0.41        25\n",
+      "\n",
+      "Model accuracy is 0.44%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = clf.predict(X_validate_vectorized)\n",
     "print(classification_report(y_validate, y_pred, zero_division=0))\n",
@@ -694,9 +783,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       1.00      0.83      0.91        12\n",
+      "  JavaScript       1.00      1.00      1.00        13\n",
+      "      Python       1.00      1.00      1.00        15\n",
+      "       Shell       0.89      1.00      0.94        16\n",
+      "\n",
+      "    accuracy                           0.96        56\n",
+      "   macro avg       0.97      0.96      0.96        56\n",
+      "weighted avg       0.97      0.96      0.96        56\n",
+      "\n",
+      "Model accuracy is 0.96%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "#Make the naive bayes object\n",
     "nb = MultinomialNB()\n",
@@ -715,9 +824,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.00      0.00      0.00         6\n",
+      "  JavaScript       0.00      0.00      0.00         6\n",
+      "      Python       1.00      0.50      0.67         6\n",
+      "       Shell       0.29      0.86      0.43         7\n",
+      "\n",
+      "    accuracy                           0.36        25\n",
+      "   macro avg       0.32      0.34      0.27        25\n",
+      "weighted avg       0.32      0.36      0.28        25\n",
+      "\n",
+      "Model accuracy is 0.36%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "#Make predictions\n",
     "y_pred = nb.predict(X_validate_vectorized)\n",
@@ -730,9 +859,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        HTML       0.75      1.00      0.86        12\n",
+      "  JavaScript       0.76      1.00      0.87        13\n",
+      "      Python       0.92      0.73      0.81        15\n",
+      "       Shell       1.00      0.69      0.81        16\n",
+      "\n",
+      "    accuracy                           0.84        56\n",
+      "   macro avg       0.86      0.86      0.84        56\n",
+      "weighted avg       0.87      0.84      0.84        56\n",
+      "\n",
+      "Model accuracy is 0.84%\n",
+      "Baseline accuracy is 28.57%\n"
+     ]
+    }
+   ],
    "source": [
     "# create KNN classifier object\n",
     "knn = KNeighborsClassifier(n_neighbors=2, weights='uniform')\n",
@@ -781,13 +930,6 @@
    "source": [
     "## Final Conclusions & Next Steps"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
