--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -67,9 +67,10 @@
    "metadata": {},
    "source": [
     "## Key Findings:\n",
-    "- We found that our [**model**] outperformed all other models, including the baseline. \n",
-    "- This model achieved [**percent**] overall accuracy on our training data, [**percent**] on our validate set, and finally [**percent**] on the unseen test data set.\n",
-    "- With more time, we would like to explore [**Hawaii, Portugal, and New Zealand**]"
+    "- The goal of this project was to try and identify which programming language was used in a GitHub repository by scraping their respective readme.md files and constructing a classification model that would 'accurately' predict the programming language.\n",
+    "- We found that our K-Nearest Neighbors model outperformed all other models, including the baseline. \n",
+    "- This model achieved 84% overall accuracy on our training data, 60% on our validate set, and finally 42% on the unseen test data set.\n",
+    "- With more time, we would like to gather more data, explore more methods for feature engineering new features for natural language processing, and use some more robust deep learning models. "
    ]
   },
   {
@@ -1213,13 +1214,6 @@
    "source": [
     "## Final Conclusions & Next Steps"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
