finished readme and final_report

--- a/APNotebook.ipynb
+++ b/APNotebook.ipynb
@@ -3087,11 +3087,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> - Libraries requiring install:\n",
+    "    > - Markdown\n",
+    "    > - BeautifulSoup\n",
+    "    > - Pandas\n",
+    "    > - Scikit-Learn\n",
+    "    > - NLTK\n",
+    "    > - "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> - You will need your own env file with credentials for the GitHub, along with these files to recreate our project:\n",
+    "    > - README.md\n",
+    "    > - acquire.py\n",
+    "    > - prepare.py \n",
+    "    > - explore.py\n",
+    "    > - run the final_report.ipynb notebook"
+   ]
   },
   {
    "cell_type": "code",
