--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1212,22 +1212,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Conclusions & Next Steps"
+    "## Final Conclusions & Next Steps: \n",
+    "- Conclusions:\n",
+    "    - It is possible to predict coding languages based off of readme files alone\n",
+    "    - Special care needs to be taken during the cleaning phase of the pipeline as the quality of words fed into the algorithm is crucial to model performance\n",
+    "    - Domain knowledge is important for determining important stop words \n",
+    "    - TF-IDF vectorizing worked better for this data\n",
+    "    - More data could help with overfitting, or possibly addressing the imbalanced character counts for each language's readme.\n",
+    "\n",
+    "- Next Steps \n",
+    "    - All models would benefit greatly from an increased sample size\n",
+    "    - We found that distance-based models outperformed decision-based models, and would like to continue adjusting hyperparameters\n",
+    "    - We would also like to look into clustering, and combining models to increase accuracy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
